--- a/ai-gateway/package.json
+++ b/ai-gateway/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "express": "5.1.0",
-    "multer": "1.4.5-lts.2"
+    "multer": "^2.0.0"
   },
   "devDependencies": {
     "typescript": "5.9.2",
