infra: implement SOP foundations\n- Add V.I.G.I.L. daily security workflow (Trivy, npm audit, pip-audit, license report)\n- Add Dependabot and CodeQL\n- Enforce LF via .gitattributes and repo-wide .editorconfig\n- CI: black shows diffs; use compose CI override without host ports\n- Add tests/ scaffolding and SOP doc stub

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,32 +24,32 @@ jobs:
           docker --version
           docker compose version
 
-      - name: Build and start services
+      - name: Build and start services (CI override without host ports)
         run: |
-          docker compose up -d --build
+          docker compose -f docker-compose.yml -f docker-compose.ci.yml up -d --build
 
 
       - name: Python unit tests (video-processor)
         run: |
-          docker compose run --rm video-processor pytest -q
+          docker compose -f docker-compose.yml -f docker-compose.ci.yml run --rm video-processor pytest -q
 
       - name: Node unit tests (ai-gateway)
         run: |
-          docker compose run --rm ai-gateway npm test
+          docker compose -f docker-compose.yml -f docker-compose.ci.yml run --rm ai-gateway npm test
 
       - name: Integration test (upload → frames → results)
         run: |
-          docker compose -f docker-compose.yml -f docker-compose.test.yml run --rm test-runner
+          docker compose -f docker-compose.yml -f docker-compose.test.yml -f docker-compose.ci.yml run --rm test-runner
 
       - name: Lint frontend
         run: |
-          docker compose run --rm frontend npm run lint
+          docker compose -f docker-compose.yml -f docker-compose.ci.yml run --rm frontend npm run lint
 
       - name: Lint ai-gateway
         run: |
-          docker compose run --rm ai-gateway npm run lint
+          docker compose -f docker-compose.yml -f docker-compose.ci.yml run --rm ai-gateway npm run lint
 
       - name: Python formatting check (black)
         run: |
-          docker compose run --rm video-processor black --check .
+          docker compose run --rm video-processor black --check . || (docker compose run --rm video-processor black --diff .; exit 1)
 
