--- a/ai-gateway/package.json
+++ b/ai-gateway/package.json
@@ -9,7 +9,8 @@
     "start": "node src/index.js",
     "lint": "eslint .",
     "format": "prettier -w .",
-    "test": "node tests/run-tests.mjs"
+    "test": "node tests/run-tests.mjs",
+    "test:coverage": "jest --coverage --coverageReporters=text-lcov"
   },
   "dependencies": {
     "express": "5.1.0",
