--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,8 @@ jobs:
       - name: Build and start services (CI override without host ports)
         run: |
           docker compose -f docker-compose.yml -f docker-compose.ci.yml up -d --build
+          # Wait briefly for services to be ready before running unit/integration tests
+          sleep 3
 
 
       - name: Python unit tests (video-processor) with coverage gate
