dev: Anti-Port Conflict System for local development\n- Add scripts/dev-preflight.sh and scripts/dev-preflight.ps1\n- Add dev:safe npm scripts (frontend, ai-gateway)\n- README: detailed instructions and example output

--- a/ai-gateway/package.json
+++ b/ai-gateway/package.json
@@ -6,6 +6,7 @@
   "engines": { "node": ">=22" },
   "scripts": {
     "dev": "node --watch src/index.js",
+    "dev:safe": "pwsh ../scripts/dev-preflight.ps1; if ($LASTEXITCODE -eq 0 -or $LASTEXITCODE -eq 2) { node --watch src/index.js }",
     "start": "node src/index.js",
     "lint": "eslint .",
     "format": "prettier -w .",
