--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "engines": { "node": ">=22" },
   "scripts": {
     "dev": "vite",
+    "dev:safe": "bash ../scripts/dev-preflight.sh || exit 0 && vite",
     "build": "vite build",
     "preview": "vite preview --port 5173",
     "lint": "eslint . --config eslint.config.js",
