ci: add concurrency cancellation to all workflows; vigil: add repository_dispatch trigger; improve npm audit parsing across npm versions; add license summary to daily report

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -5,6 +5,10 @@ on:
   pull_request:
   schedule:
     - cron: '33 2 * * 1'
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 
 jobs:
   analyze:
