--- a/ai-gateway/package.json
+++ b/ai-gateway/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "express": "5.1.0",
     "multer": "^2.0.0"
+,
+    "jszip": "^3.10.1"
   },
   "devDependencies": {
     "typescript": "5.9.2",
