--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,15 @@ jobs:
           docker --version
           docker compose version
 
+      - name: Install Trivy and jq (for security gate)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq wget gnupg
+          wget -qO- https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo gpg --dearmor -o /usr/share/keyrings/trivy.gpg
+          echo "deb [signed-by=/usr/share/keyrings/trivy.gpg] https://aquasecurity.github.io/trivy-repo/deb stable main" | sudo tee /etc/apt/sources.list.d/trivy.list
+          sudo apt-get update
+          sudo apt-get install -y trivy
+
       - name: Build and start services (CI override without host ports)
         run: |
           docker compose -f docker-compose.yml -f docker-compose.ci.yml up -d --build
