--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,16 @@ OPENROUTER_MODEL=qwen/qwen2.5-vl-32b-instruct:free
 
 # Frontend API base for local dev (compose sets this automatically)
 VITE_API_BASE=http://localhost:8080
+
+
+# Frame sampling limit for LLM analysis
+MAX_ANALYSIS_FRAMES=12
+
+# Upload size limit in MB (AI Gateway)
+MAX_UPLOAD_MB=100
+
+# Timeouts (milliseconds)
+# AI Gateway → Video Processor request timeout
+VIDEO_PROCESSOR_TIMEOUT_MS=180000
+# LLM analysis timeout via OpenRouter
+LLM_TIMEOUT_MS=20000
